# chem-development

./: .gitignore  LICENSE  README.md
chebi-mcp/: .gitignore  README.md  pyproject.toml
chebi-mcp/src/chebi_mcp/: __init__.py  client.py  server.py
chebi-mcp/tests/: test_client.py
chem-skills/: README.md
chem-skills/product-development-chemistry/: SKILL.md
chem-skills/product-development-chemistry/agents/: openai.yaml
