[project]
name = "chebi-mcp"
version = "0.1.0"
description = "MCP server for the public ChEBI chemical reference API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
chebi-mcp = "chebi_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

